# tracing_too_large

./: Cargo.toml  README.md
src/: config.rs  logging.rs  macros.rs  panic_hook.rs
