[package]
name = "common-tracing"
version = "0.1.0"
edition = "2021"


[lib]
doctest = false
test = false

[dependencies] # In alphabetical order
# Workspace dependencies
# common-base = { path = "../base" }
# common-exception = { path = "../exception" }

# Crates.io dependencies
console-subscriber = { version = "0.1.8", optional = true }
opentelemetry = { version = "0.18.0", default-features = false, features = [
  "trace",
  "rt-tokio",
] }
opentelemetry-jaeger = { version = "0.17.0", features = ["rt-tokio"] }
sentry-tracing = "0.30.0"
serde = "*"
tonic = "*"
tracing = "0.1.36"
tracing-appender = "0.2.2"
tracing-log = "0.1.3"
tracing-opentelemetry = "0.18.0"
tracing-subscriber = { version = "0.3.15", features = [
  "env-filter",
  "json",
  "valuable",
] }
